[package]
name = "tls_prf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapid_hmac = {path="/Users/soms/Development/rapid_hmac"}
tokio={ version ="1", features=["full"]}
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
